<resources>
    <string name="app_name">Sofranı Paylaş</string>
    <string name="email">E-Posta</string>
    <string name="password">Şifre</string>
    <string name="login">Giriş Yap</string>
    <string name="register">Kayıt Ol</string>
    <string name="tarih">Tarih</string>
    <string name="ana_ekran">Ana Ekran</string>
    <string name="paylas">Paylaş</string>
    <string name="profil">Profil</string>
    <string name="title">Başlık</string>
    <string name="description">Açıklama</string>
    <string name="participants">Katılımcı Sayısı</string>
    <string name="submit">Paylaşımı Onayla</string>
    <string name="logo">Logo</string>
    <string name="user_name">Kullanıcı Adı</string>
    <string name="phone">Telefon Numarası</string>
    <string name="name">Ad</string>
    <string name="surname">Soyad</string>
    <string name="profil_resmi">Profil Resmi</string>
    <string name="sifreyi_degistir">Şifreyi Değiştir</string>
    <string name="yeni_sifreyi_onayla">Yeni Şifreyi Onayla</string>
    <string name="yeni_sifre">Yeni Şifre</string>
    <string name="mevcut_sifre">Mevcut Şifre</string>
    <string name="konumu_sec">Konumu Seç</string>
    <string name="etkinlige_katil">Etkinliğe Katıl</string>
    <string name="profil_resmi_ekle">Profil Resmi Ekle</string>
    <string name="Sifre_degistir">Şifre Değiştir</string>
    <string name="cikis_yap">Çıkış Yap</string>
    <string name="agirlayan">Ağırlayan</string>
    <string name="misafir">Misafir</string>
    <string name="konum_sec">Konum Seç</string>
    <string name="etkinlik_resmi">Etkinlik Resmi</string>
    <string name="etkinlik_detaylarini_incele">Etkinlik Detaylarını İncele</string>
    <string name="etkinlik_sahibi_profil_resmi">Etkinlik Sahibi Profil Resmi</string>
    <string name="harita">Harita</string>
    <string name="konum_yok">Konum</string>
</resources>