<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    android:orientation="vertical"
    android:paddingLeft="15dp"
    android:paddingRight="15dp">

    <!-- Kullanıcı Bilgisi -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/etkinlik_sahibi_profil_resmi"
            android:src="@drawable/blank_icon" />

        <TextView
            android:id="@+id/usernameTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight=".90"
            android:fontFamily="@font/lato_bold"
            android:text="Kullanıcı Adı"
            android:textColor="#000000"
            android:textSize="22sp"
            tools:ignore="HardcodedText" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".10"
            android:contentDescription="@string/etkinlik_detaylarini_incele"
            android:src="@drawable/arrow_icon" />
    </LinearLayout>

    <!-- Etkinlik Resmi -->

    <ImageView
        android:id="@+id/eventImageView"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:contentDescription="@string/etkinlik_resmi"
        android:scaleType="fitCenter" />

    <TextView
        android:id="@+id/eventTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:drawableLeft="@drawable/open_icon"
        android:drawablePadding="10dp"
        android:fontFamily="@font/lato_bold"
        android:gravity="center_vertical"
        android:text="Başlık"
        android:textColor="#000000"
        android:textSize="24sp"
        tools:ignore="HardcodedText" />


    <TextView
        android:id="@+id/eventDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="10dp"
        android:drawableLeft="@drawable/calendar_icon"
        android:drawablePadding="6dp"
        android:fontFamily="@font/lato"
        android:gravity="center_vertical"
        android:text="Tarih"
        android:textColor="#000000"
        android:textSize="18sp"
        tools:ignore="HardcodedText" />

    <!-- Etkinlik Açıklaması -->
    <TextView
        android:id="@+id/eventDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:drawableLeft="@drawable/title_icon"
        android:drawablePadding="10dp"
        android:fontFamily="@font/lato"
        android:gravity="center_vertical"
        android:text="Açıklama"
        android:textColor="#000000"
        android:textSize="18sp"
        tools:ignore="HardcodedText" />

</LinearLayout>
